# TuringMachineSimulator

./: pyproject.toml  roadmap.md
src/: main.py  models.py  simulator.py
src/models/: simulator_models.py
